misc doc update

--- a/docs/getting-started/install.mdx
+++ b/docs/getting-started/install.mdx
@@ -30,7 +30,7 @@ title: 'Install'
   <Tab title="Github">
     ```bash
     git clone https://github.com/projectdiscovery/nuclei.git; \
-    cd nuclei/v3/cmd/nuclei; \
+    cd nuclei/cmd/nuclei; \
     go build; \
     mv nuclei /usr/local/bin/; \
     nuclei -version;
