Added docs for multi + code protocol

--- a/docs/template-guide/http/raw-http.mdx
+++ b/docs/template-guide/http/raw-http.mdx
@@ -1,6 +1,7 @@
 ---
-title: "RAW HTTP requests"
+title: "RAW HTTP"
 ---
+
 Another way to create request is using raw requests which comes with more flexibility and support of DSL helper functions, like the following ones (as of now it's suggested to leave the `Host` header as in the example with the variable `{{Hostname}}`), All the Matcher, Extractor capabilities can be used with RAW requests in same the way described above. 
 
 ```yaml
