--- a/docs/template-guide/http/unsafe-http.mdx
+++ b/docs/template-guide/http/unsafe-http.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Unsafe HTTP Requests"
+title: "Unsafe HTTP"
 ---
 
 Nuclei supports [rawhttp](https://github.com/projectdiscovery/rawhttp) for complete request control and customization allowing **any kind of malformed requests** for issues like HTTP request smuggling, Host header injection, CRLF with malformed characters and more.
