Update install.mdx | Fixed Grammar Issue
Fixed Grammar Issue

--- a/docs/getting-started/install.mdx
+++ b/docs/getting-started/install.mdx
@@ -9,7 +9,7 @@ title: 'Install'
     go install -v github.com/projectdiscovery/nuclei/v3/cmd/nuclei@latest
     ```
 
-    <Note>Nuclei require latest **GO** version to install successfully.</Note>
+    <Note>Nuclei requires latest **GO** version to install successfully.</Note>
 
   </Tab>
   <Tab title="Brew">
